--- a/package.json
+++ b/package.json
@@ -10,16 +10,25 @@
   },
   "dependencies": {
     "@portabletext/react": "^3.0.11",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.20.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.469.0",
     "next": "14.0.3",
     "next-sanity": "^5.5.11",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-icons": "^5.4.0",
     "sanity": "^3.20.2",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
@@ -27,6 +36,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "daisyui": "^4.12.23",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
